<resources>
    <string name="app_name">NSTU Diary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about"><font color='#0D47A1'>About</font></string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="preferences"><font color='#0D47A1'>Preferences</font></string>
    <string name="university_name"><![CDATA[NOAKHALI SCIENCE & TECHNOLOLGY UNIVERSITY]]></string>
    <string name="introduction_text">
        The natural setting along with its human habitations of the Southern regions of Bangladesh has been endowed with the vast and immense potentials that can fully be harnessed only through creation of a band of skilled manpower equipped with the latest knowledge of science and technology. In the beginning of its age and expanding its activities to spread the light of modern education of Science and Technology and practicing wisdom in every field of knowledge.
        \n\nNoakhali Science and Technology University was established with immense hope for maintaining the high quality education. Since its establishment, it is running without any session jam and student politics. This University family is fully determined to gain its ultimate goal of success.The university was established on 15th July 2001 and  started its academic activities on June 22, 2006. NSTU is actually belongs to four subjects of pure science which may contribute to the country and nation as well as the whole world. The subjects are Computer Science &amp; Telecommunication Engineering (CSTE), Pharmacy, Applied Chemistry &amp; Chemical Engineering (ACCE), Fisheries &amp; Marine Science (FIMS).
        \n\nCentral Library of NSTU is well furnished containing about 10,000 books and around 2000 local and foreign journals. Most important feature of this library is online library. Its construction has not been completed yet fully. When it will be started with its full bloom, students as well as other registered people of this university will be able to issue books from the library through online, and also can read the books. It is being developed day by day.
        \n\nThe teachers are well educated having good art of presentation. They are also very much amicable and have love and affection for the students. The curriculum of the university is high standard. Different occasions are celebrated with a great festivity. Teachers and students of this university are very united.
    </string>
    <string name="intro_text">
        Noakhali Science and Technology University was established with immense hope for maintaining the high quality education. Since its establishment, it is running without any session jam and student politics. This University family is fully determined to gain its ultimate goal of success.The university was established on 15th July 2001 and  started its academic activities on June 22, 2006. NSTU is actually belongs to four subjects of pure science which may contribute to the country and nation as well as the whole world. The subjects are Computer Science &amp; Telecommunication Engineering (CSTE), Pharmacy, Applied Chemistry &amp; Chemical Engineering (ACCE), Fisheries &amp; Marine Science (FIMS).
    </string>
    <string name="intro_text1">
        Central Library of NSTU is well furnished containing about 10,000 books and around 2000 local and foreign journals. Most important feature of this library is online library. Its construction has not been completed yet fully. When it will be started with its full bloom, students as well as other registered people of this university will be able to issue books from the library through online, and also can read the books. It is being developed day by day.
    </string>
    <string name="about_nstu">
        The creation of a band of skilled manpower equipped with latest knowledge of science and technology is a must to achieve a prestigious position in this modern world. As a part of ensuring quality education, with immense expectations of the southern coastal inhabitants of Bangladesh, a new university named Noakhali Science and Technology University (abbreviated as NSTU) was established on 15 July 2001 enacting the Noakhali Science and Technology University Act 2001. Finally, it started its academic activities on 22 June 2006. The inclusion of the study of humanities implies the urge felt by the concerned authority to create leaders who will fashion a more humane and just world. The university not only engages itself in teaching and research but also provides societal services for the benefit of rural and urban populations. At present, it has six faculties (namely Faculty of Engineering &amp; Technology, Faculty of Science, Faculty of Social Science and Humanities, Faculty of Education Sciences, Faculty of Law and Faculty of Business Administration) and two institutes (namely Institute of Information Science and Institute of Information Technology). The faculties include twenty eight degree offering departments namely Department of Computer Science and Telecommunication Engineering (CSTE), Department of Fisheries &amp; Marine Science (FIMS), Department of Pharmacy, Department of Applied Chemistry and Chemical Engineering (ACCE), Department of Microbiology, Department of Applied Mathematics, Department of English,  Department of Environmental Science and Disaster Management (ESDM), Department of Food Technology and Nutrition Science (FTNS), Department of Business Administration, Department of Information and Communication Engineering (ICE), Department of Economics, Department of Biotechnology and Genetic Engineering  (BGE),  Department of Agriculture (AG), Department of Statistics, Department of Electrical and Electronic Engineering (EEE), Department of Bangladesh and Liberation War Studies, Department of Oceanography, Department of Biology and Molecular Biology, Department of Zoology, Department of Education, Department of Education Administration, Department of Law, Department of Tourism and Hospitality Management, Department of Management information System, Department of Sociology, Department of Social Welfare.
        \n\nThe well furnished central library equipped with online library facilities has 10,000 printed books and 1500 printed journals apart from numerous e-books and e-journals. Since its establishment, NSTU has been running very smoothly. The teachers have extraordinary academic background and excellent skill of presentation. Presently, one fourth of the teachers are doing PhD in different parts of the world. This is the only university in Bangladesh where three individual subjects based exclusively on information study namely Information Science, Information Technology, and Information and Communication Engineering are taught. International conferences, seminars and symposiums are frequently held with participation of the scholars from all over the world. Internal Programming contest is arranged regularly to sharpen the skill as a result of which many national and international awards in programming contests are already in the store of this university. Students of Fisheries and Marine Science as well as Oceanography with their extensive research on healthy marine resources privileged by the location of this university in a coastal arena are contributing greatly to the country’s blue economy. Co-curricular activities are extensively patronized. There are students’ organizations like NSTUMUNA, NSTU Debating Society, NSTU English Club, NSTU Business Club etc which work to develop leadership capacity of a student by promoting the art of public speaking, reasoning and logical thinking. Besides, NSTU Blood Donors Society, DreamBazz Filmz, Moshal, Protiddhoni, NSTU Photographic Society etc are there whose activities aim at the formation of a non-communal and progressive cultural mind. The way the national and international days are observed and different cultural festivals are celebrated with active participation of not only the students but the local dwellers as well has turned the campus into a cultural capital of this southern region. The slogan “Green NSTU, Clean NSTU” has been an inspiring tonic among all in keeping this naturally blessed green campus neat and clean. The calm, quiet &amp; soothing environment of the campus, modeled upon the western modern universities like the University of Cambridge, is a wonderful escape for the researchers from the hustle and bustle of town life for an uninterrupted concentration on their study and research. Now-a-days, NSTU is lovingly addressed as ‘The Cambridge of the Coastal Terrain’. Each member of NSTU family is trying hard to make this addressing a reality.
    </string>
    <string name="msg_from_vc">
        Welcome to the Noakhali Science and Technology University (NSTU)!!
        \n\nIt gives me a great pleasure to welcome you at  Noakhali Science and Technology University (NSTU), which is the 27th public university in the country and this website will now allow you to visit Noakhali Science and Technology University (NSTU) virtually from anywhere no matter where you are.
        \n\nNoakhali Science and Technology University (NSTU) established in 15th July, 2001 and the academic activities starts in 22th June, 2006, having only 180 students in four departments – Department of Computer Science and Telecommunication Engineering (CSTE), Department of Pharmacy, Department of Applied Chemistry and Chemical Engineering (ACCE) and Department of Fisheries and Marine Science (FIMS).Now-a-days, this university is well known as the “Coastal Oxford”. The University provides high-quality education, equipping students with the acumen to address both local and global challenges. Presently, NSTU accommodates 6 Faculties, 30 Departments, 2 Institutes, 300 teachers, and more than 5000 students.
        \n\nAll of the teachers and supportive staffs of NSTU are committed to prepare our students to hard work, acquire skills, technical knowledge and enhance their capabilities that will help them adequately to cope in rapidly changing global environment. In NSTU there are highly qualified and experienced faculties. We will strengthen our faculty to provide higher education of international standards in relevant areas and facilitate training programs for all of the teachers and Officers through IQAC (Institutional Quality Assurance Cell).
        \n\nNSTU’s academic standards are accepted in worldwide, enjoying MoU (Memorandum of Understanding) with many famous universities, institutions and scholarly bodies from all over the world especially Angila Ruskin University, Kynunpouk National University, Hiroshima University, University of Stirling, Bangabandhu Sheikh Mujibur Rahman Maritime University, Bangladesh providing students/teachers the opportunity to transfer to relevant programs and higher education, joint research etc.
        \n\nAs the Vice-Chancellor of NSTU, I hope that continuous efforts would be made to update the website so that researchers, faculty members, students, concern stakeholders can be benefitted. I anticipate that this website will help you to know more about the university.
    </string>
    <string name="vc">Vice Chancellor</string>
    <string name="vc_name">Professor Dr. M Wahiduzzaman</string>
    <string name="about_nstu_title">About NSTU</string>
    <string name="message_from_vc_title">Message From VC</string>
</resources>