<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nstuinfo.IntroActivity"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/titleRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/university_name"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:shadowColor="@android:color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:layout_toRightOf="@+id/RLLogo"
            android:layout_toEndOf="@id/RLLogo"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RLLogo"
            android:layout_alignTop="@id/titleTV"
            android:layout_alignBottom="@id/titleTV"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="5dp">
            <ImageView
                android:id="@+id/logoImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"
                android:padding="0dp"/>
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/enterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ENTER"
        android:textStyle="bold"
        android:shadowColor="@android:color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:textSize="17sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/enter_btn_bg"
        android:textColor="@android:color/white"
        android:paddingTop="5dp"
        android:paddingBottom="8dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"/>

    <Button
        android:id="@+id/enterBtnImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/enterBtn"
        android:layout_alignBottom="@id/enterBtn"
        android:background="@drawable/ic_action_enter"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        tools:ignore="RelativeOverlap" />

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_below="@id/titleRL"
        android:layout_above="@id/enterBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/intro_bg"
        android:padding="5dp">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ViewFlipper
                    android:id="@+id/viewFlipper"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/nstu_cover_2"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/nstu_cover_3"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/uni_day"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/nstu_cover_4"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/nstu_cover_5"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/nstu_cover_7"
                        tools:ignore="ContentDescription" />

                </ViewFlipper>

                <TextView
                    android:id="@+id/aboutNSTUTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_nstu_title"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"/>

                <at.blogc.android.views.ExpandableTextView
                    android:id="@+id/expandableTextView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_nstu"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="normal"
                    android:gravity="start"
                    android:maxLines="5"
                    android:ellipsize="end"
                    app:animation_duration="750"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btnReadMore1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/read_more_bg"
                    android:text="Read more"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="3dp"/>

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/md_grey_400"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vc"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:padding="5dp"/>

                <ImageView
                    android:id="@+id/imageVC"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/vc_sir"/>

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vc_name"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:padding="5dp"/>

                <View
                    android:id="@+id/view2"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/md_grey_400"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/msgFromVCTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_from_vc_title"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:padding="5dp"/>

                <at.blogc.android.views.ExpandableTextView
                    android:id="@+id/expandableTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_from_vc"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="normal"
                    android:gravity="start"
                    android:maxLines="5"
                    android:ellipsize="end"
                    app:animation_duration="750"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btnReadMore2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/read_more_bg"
                    android:text="Read more"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_below="@id/titleRL"
        android:layout_above="@id/enterBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/intro_bg_transparent">

    </RelativeLayout>

</RelativeLayout>
